# otto-gfx

./: .gitmodules  CMakeLists.txt  README.md
lib/: ._stb_truetype.h
src/: OCRAStd.inc  gfx.cpp  gfx.hpp
